crates/lang/tests/ui/trait_def/fail/definition_assoc_type.rs
use ink_lang as ink;

#[ink::trait_definition]
pub trait TraitDefinition {
    type Type;

    #[ink(message)]
    fn message(&self);
}

fn main() {}
