crates/lang/tests/ui/trait_def/fail/definition_assoc_type.stderr
error: associated types in ink! trait definitions are not supported, yet
 --> tests/ui/trait_def/fail/definition_assoc_type.rs:5:5
  |
5 |     type Type;
  |     ^^^^^^^^^^
